--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "antd": "^5.20.3",
     "antd-demo": "^0.1.0",
     "axios": "^1.7.5",
+    "crypto-js": "^4.2.0",
     "framer-motion": "^11.3.31",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
