--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "antd-demo": "^0.1.0",
     "axios": "^1.7.5",
     "crypto-js": "^4.2.0",
+    "formik": "^2.4.6",
     "framer-motion": "^11.3.31",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
@@ -25,7 +26,9 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.1",
-    "redux-saga": "^1.3.0"
+    "react-select": "^5.8.0",
+    "redux-saga": "^1.3.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
